--- a/lib/jquery.bxslider.css
+++ b/lib/jquery.bxslider.css
@@ -172,6 +172,6 @@ ul.bxslider {
 .bx-wrapper .bx-caption span {
   color: #fff;
   display: block;
-  font-size: 1.4em;
+  font-size: 2.4vmin;
   padding: 10px;
 }
